force-app/main/default/objects/Krow__Task_Section__c/Krow__Task_Section__c.object-meta.xml
<CustomObject>
    <label>Klient Task Section</label>
    <nameField>
        <label>Klient Task Sections Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Klient Task Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>