force-app/main/default/objects/Krow__Task_Section__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Klient Task Sections</relationshipLabel>
    <relationshipName>Krow_Task_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>