force-app/main/default/objects/Krow__Task_Section__c/fields/Krow__Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Section_Type__c</fullName>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>