force-app/main/default/objects/Krow__Task_Section__c/fields/Krow__Total_Junction__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Junction__c</fullName>
    <label>Total Junction</label>
    <summaryForeignKey>Krow__Task_Section_Junction__c.Krow__Task_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>