force-app/main/default/objects/Krow__Task_Section__c/validationRules/Krow__Restricted_Section_Name_for_create.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Restricted_Section_Name_for_create</fullName>
    <active>true</active>
    <description>&quot;new&quot;,&quot;complete&quot; is system reserve section name so prevent these section to be created.</description>
    <errorConditionFormula>OR(LOWER(Name) = &apos;new&apos;,LOWER(Name) = &apos;complete&apos;,LOWER(Name) = &apos;completed&apos;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You can not create section with this name.Choose another name.</errorMessage>
</ValidationRule>