force-app/main/default/objects/Krow__Task_Section__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Section_Type__c</columns>
    <columns>Krow__Project__c</columns>
    <columns>Krow__Sequence__c</columns>
    <columns>Krow__Total_Junction__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>